--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "aws-sdk": "^2.7.7",
+    "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "imagemagick": "^0.1.3"
   }
